--- a/app/project1/webapp/view/View1.view.xml
+++ b/app/project1/webapp/view/View1.view.xml
@@ -16,46 +16,71 @@
                 <Label id="_IDGenLabel4" text="Salary" />
                 <Input id="salaryInput" type="Number" width="20%" value=""/>
             </form:SimpleForm>
-            <Toolbar id="tbar1">
-                <ToolbarSpacer id="tbspacer1"/>
-                <Button id="btInsert" text="Insert" icon="sap-icon://add" press="onPressInsert" type="Emphasized"/>
-                <Button id="btDelete" text="Delete" icon="sap-icon://delete" press="onPressDelete" type="Emphasized"/>
+
+            <Toolbar id="_IDGenToolbar">
+                <ToolbarSpacer id="_IDGenToolbarSpacer"/>
+                <Button id="_IDGenButton" text="Insert" icon="sap-icon://add" press="onPressInsert" type="Emphasized"/>
+                <Button id="_IDGenButton1" text="Delete" icon="sap-icon://delete" press="onPressDelete" type="Emphasized"/>
             </Toolbar>
-            <ui:Table id="EmpTable" ariaLabelledBy="title" title="Family members details related to Employee"
-                      rows="{EmpModel>/TableDetails}" enableColumnFreeze="true">
+
+            <ui:Table id="EmpTable" rows="{EmpModel>/TableDetails}" enableColumnFreeze="true">
                 <ui:columns>
-                    <ui:Column id="c1" width="6%" hAlign="Center">
-                        <Label id="l1" text="S.No" textAlign="Center" width="100%"/>
+                    <ui:Column id="_IDGenColumn" width="6%" hAlign="Center">
+                        <Label id="_IDGenLabel5" text="S.No" textAlign="Center" />
                         <ui:template>
-                            <Text id="text1" text="{EmpModel>SiNo}" />
+                            <Text id="_IDGenText" text="{EmpModel>SiNo}" />
                         </ui:template>
                     </ui:Column>
-                    <ui:Column id="c2" width="15%" hAlign="Center">
-                        <Label id="l2" text="Name(s)" textAlign="Center" width="100%"/>
+                    <ui:Column id="_IDGenColumn1" width="15%" hAlign="Center">
+                        <Label id="_IDGenLabel6" text="Name(s)" textAlign="Center" />
                         <ui:template>
-                            <Input id="text2" value="{EmpModel>Name}"/>
+                            <Input id="_IDGenInput" value="{EmpModel>Name}"/>
                         </ui:template>
                     </ui:Column>
-                    <ui:Column id="c3" width="25%" hAlign="Center">
-                        <Label id="l3" text="Relationship with Employee" textAlign="Center" width="100%"/>
+                    <ui:Column id="_IDGenColumn2" width="25%" hAlign="Center">
+                        <Label id="_IDGenLabel7" text="Relationship with Employee" textAlign="Center" />
                         <ui:template>
-                            <Input id="text3" value="{EmpModel>Relationship}"/>
+                            <Input id="_IDGenInput1" value="{EmpModel>Relationship}"/>
                         </ui:template>
                     </ui:Column>
-                    <ui:Column id="c4" width="6%" hAlign="Center">
-                        <Label id="l4" text="Age" width="100%" textAlign="Center"/>
+                    <ui:Column id="_IDGenColumn3" width="6%" hAlign="Center">
+                        <Label id="_IDGenLabel8" text="Age" textAlign="Center" />
                         <ui:template>
-                            <Input id="text4" value="{EmpModel>Age}" type="Number"/>
+                            <Input id="_IDGenInput2" value="{EmpModel>Age}" type="Number"/>
                         </ui:template>
                     </ui:Column>
                 </ui:columns>
             </ui:Table>
+
+            <Toolbar id="_IDGenToolbar1">
+                <Button id="_IDGenButton2" text="Submit" press="onSubmit" type="Emphasized"/>
+             
+            </Toolbar>
+
+            <!-- sap.m.Table for ReadModel -->
+            <Table id="Mtable" items="{ReadingModel>/results}">
+    <columns> 
+        <Column id="_IDGenColumnId">
+            <Text id="_IDGenTextid" text="ID" />
+        </Column>
+        <Column id="_IDGenColumn4">
+            <Text id="_IDGenText1" text="Name" />
+        </Column>
+         <Column id="_IDGenColumn0">
+            <Text id="_Btn1" text="Delete" />
+        </Column>
+    </columns>
+    <items>
+        <ColumnListItem id="_IDGenColumnListItem">
+            <cells>
+                <Text id="Idtext" text="{ReadingModel>Id}"/>
+                <Text id="_IDGenText2" text="{ReadingModel>Name}" />
+                <Button id="BTN3" text="Del" press="onDelete" type="Emphasized"/>
+            </cells>
+        </ColumnListItem>
+    </items>
+</Table>
+
         </content>
-        <footer>
-            <OverflowToolbar id="MainOverFlowToolbar" class="sapUiMediumMarginTop">
-                <ToolbarSpacer id="_IDGenToolbarSpacer"/>
-                <Button id="_IDGenButton" text="Submit" press="onSubmit" type="Emphasized"/>
-            </OverflowToolbar>
-        </footer>
     </Page>
 </mvc:View>
